# sample-code-for-server

./: .gitignore  CMakeLists.txt  Makefile.compile  README.md
http-add-and-blog/: Makefile  README.md
http-add-and-blog/src/: StringRef.h  argv.cc  argv.h  daemon.h  file.cc  file.h  helper.h  json.cc  json.h  main.cc  server.cc  server.h  test.inf
http-add-and-blog/test/: test-helper.cc
http-server/: CMakeLists.txt  ThreadSafeQueue.h  argv.h  daemon.cc.swap  file.cc  file.h  main.cc  server.cc  server.h  tcpstream.cc  tcpstream.h  threadpool.h
http-server-with-static-data/: Makefile
http-static/: CMakeLists.txt  http-server.cc
streambuf/: CMakeLists.txt  Makefile
streambuf/src/: main.cc
tcp-server/: CMakeLists.txt  Makefile
tcp-server/src/: tcp-server.cc
tcpstream/: CMakeLists.txt  Makefile  debug.h  tcpserver.h  tcpstream.cc
tcpstream/src/: main.cc  tcpserver.cc
